--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -348,6 +348,7 @@ $datepicker-sub-title-font-color:            $gray800;
 $datepicker-sub-title-font-weight:           $font-weight-regular;
 $datepicker-sub-title-bg-color:              $neutral50;
 // calendar
+$datepicker-calendar-month-font-size:        $font-size-s;
 $datepicker-calendar-month-font-weight:      $font-weight-medium;
 $datepicker-calendar-month-font-color:       $gray800;
 $datepicker-calendar-title-font-color:       $gray500;
