#10890 알림창 디자인 적용 -> 디자인 적용

--- a/src/main/resources/public/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/scss/theme/default/_notification.scss
@@ -26,6 +26,7 @@
     color: $notification-container-color;
     background-color: $notification-container-background;
     display: none;
+    z-index: 25;
     &.z-on { display: block; }
   }
 
