--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -6513,19 +6513,19 @@ body.modal-active {
 .alice-toastify.toast-content .content div.message {
   padding-bottom: 0.625rem;
 }
-.alice-toastify.toast-content .content div span.title {
+.alice-toastify.toast-content .content div span.z-title {
   max-width: 18.13rem;
   font-size: 1rem;
   font-weight: 500;
-  color: #FAFAFA;
+  color: #222529;
 }
-.alice-toastify.toast-content .content div span.message {
+.alice-toastify.toast-content .content div span.z-message {
   max-width: 22.5rem;
   font-size: 1rem;
   font-weight: 400;
   color: #222529;
 }
-.alice-toastify.toast-content .content div span.date {
+.alice-toastify.toast-content .content div span.z-date {
   font-size: 0.875rem;
   font-weight: 400;
   color: #ABB0B5;
