--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -748,6 +748,16 @@ input, button, select, optgroup, textarea {
   -webkit-mask-position: center;
   mask-position: center;
 }
+.z-icon.i-water-drop {
+  width: 1.75rem;
+  height: 1.75rem;
+  -webkit-mask-image: url("../media/icons/icon_water_drop.svg");
+  mask-image: url("../media/icons/icon_water_drop.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+}
 
 /* _layout.scss
  *
@@ -2182,6 +2192,7 @@ svg path.connector.hidden {
 .z-button-icon.primary .z-icon {
   display: inline-block;
   background: #FFFFFF;
+  pointer-events: none;
 }
 .z-button.primary:focus,
 .z-button-icon.primary:focus {
@@ -2238,6 +2249,7 @@ svg path.connector.hidden {
 .z-button-icon.secondary .z-icon {
   display: inline-block;
   background: #339AF0;
+  pointer-events: none;
 }
 .z-button.secondary:focus,
 .z-button-icon.secondary:focus {
@@ -2294,6 +2306,7 @@ svg path.connector.hidden {
 .z-button-icon.extra .z-icon {
   display: inline-block;
   background: #339AF0;
+  pointer-events: none;
 }
 .z-button.extra:focus,
 .z-button-icon.extra:focus {
@@ -2350,6 +2363,7 @@ svg path.connector.hidden {
 .z-button-icon.form .z-icon {
   display: inline-block;
   background: #424242;
+  pointer-events: none;
 }
 .z-button.form:focus,
 .z-button-icon.form:focus {
@@ -2406,6 +2420,7 @@ svg path.connector.hidden {
 .z-button-icon.light-primary .z-icon {
   display: inline-block;
   background: #FFFFFF;
+  pointer-events: none;
 }
 .z-button.light-primary:focus,
 .z-button-icon.light-primary:focus {
@@ -2462,6 +2477,7 @@ svg path.connector.hidden {
 .z-button-icon.light-secondary .z-icon {
   display: inline-block;
   background: #FFFFFF;
+  pointer-events: none;
 }
 .z-button.light-secondary:focus,
 .z-button-icon.light-secondary:focus {
@@ -2517,6 +2533,7 @@ svg path.connector.hidden {
 .z-button-icon.light-extra .z-icon {
   display: inline-block;
   background: #FFFFFF;
+  pointer-events: none;
 }
 .z-button.light-extra:focus,
 .z-button-icon.light-extra:focus {
@@ -2573,6 +2590,7 @@ svg path.connector.hidden {
 .z-button-icon.light-form .z-icon {
   display: inline-block;
   background: #424242;
+  pointer-events: none;
 }
 .z-button.light-form:focus,
 .z-button-icon.light-form:focus {
@@ -2672,6 +2690,7 @@ svg path.connector.hidden {
 .z-button-toggle-group .z-button-toggle .z-icon {
   display: inline-block;
   background: #222529;
+  pointer-events: none;
 }
 .z-button-switch-group .z-button-switch:focus,
 .z-button-switch-group .z-button-toggle:focus,
@@ -3754,41 +3773,132 @@ svg path.connector.hidden {
   vertical-align: middle;
 }
 
-.z-color-palette-wrapper {
+.z-color-picker-wrapper {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: #8B9094;
+}
+.z-color-picker-wrapper .z-color-input {
+  display: none;
+}
+.z-color-picker-wrapper .z-color-picker {
   width: 7.5rem;
   padding: 0.3125rem;
   border: 0.0625rem solid #CFD5D9;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
+  box-shadow: none;
   cursor: pointer;
   outline: none;
 }
-.z-color-palette-wrapper .z-color-input {
-  display: none;
-}
-.z-color-palette-wrapper .z-color-box {
+.z-color-picker-wrapper .z-color-picker .z-color-box {
   display: inline-block;
   width: 4.75rem;
   height: 1.5rem;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   border: 0.25rem solid transparent;
 }
-.z-color-palette-wrapper .z-icon.i-color-palette {
+.z-color-picker-wrapper .z-color-picker .z-icon.i-color-palette {
   background: #8B9094;
-  pointer-events: none;
 }
-
-.z-palette-modal {
+.z-color-picker-wrapper .z-color-picker:focus, .z-color-picker-wrapper .z-color-picker:hover {
+  outline: 0;
+}
+.z-color-picker-wrapper .z-color-picker:hover {
+  border-color: #64BBF6;
+}
+.z-color-picker-wrapper .z-color-picker:focus {
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  -moz-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+}
+.z-color-picker-wrapper .z-color-picker-modal {
   display: none;
   position: fixed;
-  min-width: 23.375rem;
+  min-width: 23.5rem;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
+  -webkit-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  -moz-box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  box-shadow: 0 0.125rem 0.75rem 0 #CFD5D9;
+  background-color: #FFFFFF;
   z-index: 1000;
 }
-.z-palette-modal.active {
+.z-color-picker-wrapper .z-color-picker-modal.active {
   display: block;
   z-index: 1000;
 }
-
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container {
+  min-height: 12.5rem;
+  padding: 0.75rem;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row:first-child {
+  margin-bottom: 0.5rem;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row .z-palette-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 1.75rem;
+  height: 1.75rem;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
+  cursor: pointer;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row .z-palette-item.material-color:not(.first) {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row .z-palette-item.material-color:not(.last) {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row .z-palette-item.border-inset {
+  -webkit-box-shadow: inset 0 0 0 0.0625rem #CFD5D9;
+  -moz-box-shadow: inset 0 0 0 0.0625rem #CFD5D9;
+  box-shadow: inset 0 0 0 0.0625rem #CFD5D9;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row .z-palette-item .z-palette-item-inner {
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  pointer-events: none;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-palette-container .z-palette-row .z-palette-item.selected {
+  -webkit-box-shadow: inset 0 0 0 0.0625rem #339AF0;
+  -moz-box-shadow: inset 0 0 0 0.0625rem #339AF0;
+  box-shadow: inset 0 0 0 0.0625rem #339AF0;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container {
+  position: relative;
+  min-height: 4.875rem;
+  padding: 0.75rem;
+  border-top: 0.0625rem solid #CFD5D9;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-edit {
+  position: absolute;
+  top: 0.125rem;
+  right: 0.75rem;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-container {
+  margin: 0.75rem 0;
+}
 /* _tooltip.scss 
  *
  * 파일 경로 : template/_tooltip.scss
