--- a/src/main/resources/public/scss/template/_color-picker.scss
+++ b/src/main/resources/public/scss/template/_color-picker.scss
@@ -117,40 +117,136 @@
   }
 }
 
-.#{$common-prefix}color-palette-wrapper {
-  width: 7.5rem; // 120px
-  padding: 0.3125rem; // 5px
-  @include border(0.0625rem, solid, $gray300, all); // 1px
-  @include borderRadius(0.125rem); // 2px
-  cursor: pointer;
-  outline: none;
+.#{$common-prefix}color-picker-wrapper {
+  font-family: $color-picker-font-family;
+  font-size: $color-picker-font-size;
+  font-weight: $color-picker-font-weight;
+  color: $color-picker-font-color;
 
   .#{$common-prefix}color-input {
     display: none;
   }
+  // color picker
+  .#{$common-prefix}color-picker {
+    width: $color-picker-width;
+    padding: 0.3125rem; // 5px
+    @include border($color-picker-border-width, solid, $color-picker-border-color, all); // 1px
+    @include borderRadius($color-picker-border-radius);
+    box-shadow: none;
+    cursor: pointer;
+    outline: none;
 
-  .#{$common-prefix}color-box {
-    display: inline-block;
-    width: 4.75rem; // 76px
-    height: 1.5rem; // 24px
-    @include border(0.25rem, solid, transparent, all); // 4px
-  }
-  .#{$common-prefix}icon {
-    &.i-color-palette {
-      background: $gray500;
-      pointer-events: none;
+    .#{$common-prefix}color-box {
+      display: inline-block;
+      width: 4.75rem; // 76px
+      height: 1.5rem; // 24px
+      @include borderRadius($color-palette-inset-border-radius);
+      @include border($color-palette-line-border-width, solid, transparent, all); // 4px
+    }
+    .#{$common-prefix}icon {
+      &.i-color-palette {
+        background: $color-picker-icon-color;
+      }
+    }
+
+    &:focus,
+    &:hover {
+      outline: 0;
+    }
+
+    &:hover {
+      border-color: $color-picker-hover-border-color;
+    }
+
+    &:focus {
+      border-color: $color-picker-focus-border-color;
+      @include boxShadow(0, 0.125rem, 0.75rem, 0, $color-picker-modal-box-shadow-color); // 0 2px 12px 0
     }
   }
-}
-
-.#{$common-prefix}palette-modal {
-  display: none;
-  @include fixed();
-  min-width: 23.375rem; // 374px
-  z-index: $z-index-modal;
-  // modal open
-  &.active {
-    display: block;
+  // 모달
+  .#{$common-prefix}color-picker-modal {
+    display: none;
+    @include fixed();
+    min-width: 23.5rem; // 376px
+    @include border($color-picker-border-width, solid, $color-picker-border-color, all); // 1px
+    @include borderRadius($color-picker-border-radius);
+    @include boxShadow(0, 0.125rem, 0.75rem, 0, $color-picker-modal-box-shadow-color); // 0 2px 12px 0
+    background-color: $color-picker-modal-bg-color;
     z-index: $z-index-modal;
+    // modal open
+    &.active {
+      display: block;
+      z-index: $z-index-modal;
+    }
+    // color palette
+    .#{$common-prefix}palette-container {
+      min-height: 12.5rem; // 200px
+      padding:  0.75rem; // 12px
+
+      .#{$common-prefix}palette-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        &:first-child {
+          margin-bottom: 0.5rem; // 8px
+        }
+
+        .#{$common-prefix}palette-item {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          width: 1.75rem; // 28px
+          height: 1.75rem; // 28px
+          @include borderRadius($color-palette-border-radius);
+          cursor: pointer;
+
+          &.material-color:not(.first) {
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+          }
+          &.material-color:not(.last) {
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+          }
+          // 하얀 색상은 테두리를 표기함
+          &.border-inset {
+            @include boxShadow(0, 0, 0, $color-picker-border-width, $color-picker-border-color, true);
+          }
+
+          .#{$common-prefix}palette-item-inner {
+            width: 1.25rem; // 20px
+            height: 1.25rem; // 20px
+            @include borderRadius($color-palette-inset-border-radius);
+            pointer-events: none;
+          }
+
+          &.selected {
+            @include boxShadow(0, 0, 0, $color-palette-selected-border-width, $color-palette-selected-border-color, true);
+          }
+        }
+      }
+    }
+    // 사용자 색상
+    .#{$common-prefix}custom-color-palette-container {
+      @include relative();
+      min-height: 4.875rem; // 78px
+      padding:  0.75rem; // 12px
+      @include border($color-picker-border-width, solid, $color-picker-border-color, top); // 1px
+
+      // 편집 버튼
+      .#{$common-prefix}custom-color-edit {
+        @include absolute($top: 0.125rem, $right: 0.75rem); // 2px 12px
+      }
+      // 사용자 색상 목록 영역
+      .#{$common-prefix}custom-color-container {
+        margin: 0.75rem 0; // 12px 0
+      }
+      // 물방울, hex, rgb, 추가 버튼 영역
+      .#{$common-prefix}custom-color-control {
+
+      }
+    }
   }
 }
