--- a/src/main/resources/public/scss/template/_icons.scss
+++ b/src/main/resources/public/scss/template/_icons.scss
@@ -68,4 +68,9 @@
   &.i-color-palette {
     @include maskImage('#{$icon-folder-path}icon_color_palette.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
   }
+
+  // 물방울
+  &.i-water-drop {
+    @include maskImage('#{$icon-folder-path}icon_water_drop.svg', 1.75rem, 1.75rem, no-repeat, center); // 28px 28px
+  }
 }
