--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -6354,11 +6354,13 @@ body.modal-active {
 .z-notification-header span {
   display: inline-block;
   font-size: 0.875rem;
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-weight: 400;
   color: #FFFFFF;
 }
 .z-notification-header span.z-title {
   font-size: 1rem;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   font-weight: 500;
 }
 .z-notification-header span.z-total {
@@ -6395,7 +6397,7 @@ body.modal-active {
   border-bottom: 0.063rem solid #EEEEEE;
 }
 .z-notification-content:hover {
-  background-color: rgba(135, 206, 255, 0.1);
+  background-color: rgba(132, 209, 250, 0.1);
 }
 .z-notification-content .z-notification-checked {
   display: flex;
@@ -6409,7 +6411,7 @@ body.modal-active {
   height: 1.125rem;
   padding: 0.313rem;
   margin: 0;
-  border: 0.063rem solid #0098FF;
+  border: 0.063rem solid #0096ff;
   border-radius: 0.063rem;
   -webkit-border-radius: 0.063rem;
   -moz-border-radius: 0.063rem;
@@ -6446,6 +6448,7 @@ body.modal-active {
   margin-left: 0.625rem;
   font-weight: 500;
   font-size: 1rem;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   line-height: 1.2;
   color: #222529;
 }
@@ -6463,6 +6466,7 @@ body.modal-active {
   margin-left: 1.75rem;
   font-weight: 400;
   font-size: 1rem;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   color: #222529;
 }
 .z-notification-content span.z-message.z-confirm {
@@ -6470,6 +6474,7 @@ body.modal-active {
 }
 .z-notification-content span.z-date {
   margin-left: 1.75rem;
+  font-font: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-weight: 400;
   font-size: 0.875rem;
   color: #ABB0B5;
@@ -6517,17 +6522,21 @@ body.modal-active {
   max-width: 18.13rem;
   font-size: 1rem;
   font-weight: 500;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   color: #222529;
 }
 .alice-toastify.toast-content .content div span.z-message {
   max-width: 22.5rem;
   font-size: 1rem;
   font-weight: 400;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+  font-font: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   color: #222529;
 }
 .alice-toastify.toast-content .content div span.z-date {
   font-size: 0.875rem;
   font-weight: 400;
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   color: #ABB0B5;
 }
 .alice-toastify .toast-close {
