#10890 알림창 디자인 -> MR 응대

--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -146,7 +146,7 @@ $tooltip-contents-left:                       auto;
 $tooltip-contents-width:                      22.5rem; // 360px
 
 /////////////////////////// Notification ///////////////////////////
-// nofification 상단 알람
+// Notification 상단 알람
 $notification-icon-color:                     $gray300;
 $notification-icon-close-color:               $white;
 
