--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -188,6 +188,8 @@ $notification-checkbox-border:                0.063rem; // 1px
 $notification-checkbox-border-color:          $category01;
 $notification-checkbox-checked-color:         $gray300;
 $notification-checkbox-checked-border-color:  $neutral200;
+$notification-checkbox-checked-font-size:     $font-size-s;
+$notification-checkbox-checked-font-family:   $font-family-m;
 
 // Toastify 하단 알람
 $toastify-height:                             6.25rem; // 100px
